--- a/src/usr/local/emhttp/plugins/tailscale/Tailscale.page
+++ b/src/usr/local/emhttp/plugins/tailscale/Tailscale.page
@@ -12,5 +12,6 @@ require_once "{$docroot}/plugins/tailscale/include/webgui-interface.php";
         showStatus('tailscaled');
     });
 </script>
+<?= $tailscale_output['lock_warning']; ?>
 <?= $tailscale_output['key_expiry_warning']; ?>
 <iframe src="/plugins/tailscale/interface.php" style="width:100%; height:600px; border: none;"></iframe>
