--- a/src/usr/local/emhttp/plugins/tailscale/Tailscale-5-Log.page
+++ b/src/usr/local/emhttp/plugins/tailscale/Tailscale-5-Log.page
@@ -25,7 +25,7 @@ Type="xmenu"
     }
 </style>
 <script>
-    var logfile = "/var/log/syslog";
+    var logfile = "/var/log/tailscale.log";
 
     function showLog(log) {
         logfile = log;
@@ -43,7 +43,7 @@ Type="xmenu"
         }, function(data) {
             clearTimeout(timers.syslog);
             const result = data.split(/\r?\n/);
-            const filtered = result.filter(line => line.includes('tailscale')).reverse();
+            const filtered = result.reverse();
 
             $('pre.up').html(filtered.join('\r\n'));
             $('div.spinner.fixed').hide('slow');
