--- a/src/usr/local/emhttp/plugins/tailscale/Tailscale.page
+++ b/src/usr/local/emhttp/plugins/tailscale/Tailscale.page
@@ -5,13 +5,23 @@ Type="xmenu"
 Tabs="true"
 ---
 <?php
-require_once "{$docroot}/plugins/tailscale/include/webgui-interface.php";
+require_once "{$docroot}/plugins/tailscale/include/common.php";
+
+if ($tailscale_config['ENABLE_TAILSCALE'] == "1") {
+    require_once "{$docroot}/plugins/tailscale/include/webgui-interface.php";
+}
 ?>
 <script>
     $(function() {
         showStatus('tailscaled');
     });
 </script>
+<?php
+if ($tailscale_config['ENABLE_TAILSCALE'] == "1") {
+?>
 <?= $tailscale_output['lock_warning']; ?>
 <?= $tailscale_output['key_expiry_warning']; ?>
 <iframe src="/plugins/tailscale/interface.php" style="width:100%; height:600px; border: none;"></iframe>
+<?php } else { ?>
+Tailscale is currently disabled. It can be enabled via the Settings tab.
+<?php } ?>
