--- a/src/usr/local/emhttp/plugins/tailscale/Tailscale-4-Help.page
+++ b/src/usr/local/emhttp/plugins/tailscale/Tailscale-4-Help.page
@@ -5,20 +5,20 @@ Tag="question"
 Type="xmenu"
 ---
 
-## Initial Configuration
+## _(Initial Configuration)_
 
 You may want to disable key expiration for your server (either by using an 
 auth key and connecting via the CLI, or afterwards via the Tailscale admin
 console).
 
-## System Settings
+## _(System Settings)_
 
-### Unraid services listen on Tailscale IP
+### _(Unraid services listen on Tailscale IP)_
 
 Configures Unraid services (SSH, WebGUI, SMB, etc.) to listen on Tailscale 
 addresses.
 
-### Enable IP Forwarding
+### _(Enable IP Forwarding)_
 
 This setting modifies the sysctl settings for IPv4 and IPv6 forwarding.
 This is useful when Tailscale is configured to be a subnet router or
@@ -27,7 +27,7 @@ exit node.
 When set to Yes, IPv4 and IPv6 forwarding are both turned on.  
 When set to No, the plugin does not modify the forwarding settings.
 
-### Taildrop Location
+### _(Taildrop Location)_
 
 Enter a valid path here to enable the Unraid server to accept files via
 Taildrop.
@@ -35,7 +35,7 @@ Taildrop.
 If this setting is configured, Tailscale will be restarted when the array
 starts; this is required for the Taildrop folder to be detected and used.
 
-### Allow Usage Data Collection
+### _(Allow Usage Data Collection)_
 
 Allows usage information to be collected:
 
@@ -43,20 +43,20 @@ Allows usage information to be collected:
 - Tailscale plugin version
 - Unraid version
 
-## Tailscale Settings
+## _(Tailscale Settings)_
 
 If a setting is set to "Ignore", the plugin will not make any changes to the 
 setting in Tailscale. This is useful if you wish to configure settings via 
 CLI instead of the WebGUI.
 
-### Use Tailscale Subnets
+### _(Use Tailscale Subnets)_
 
 When enabled, Unraid will accept routes advertisted from subnet routers in the 
 tailnet.
 
 When disabled, Unraid will not accept routes from subnet routers.
 
-### Use Tailscale DNS Settings
+### _(Use Tailscale DNS Settings)_
 
 When enabled, Unraid will use the DNS settings configured in the Tailscale 
 admin console, including MagicDNS and nameservers.
@@ -67,7 +67,7 @@ network settings.
 Refer to [https://tailscale.com/kb/1054/dns/](https://tailscale.com/kb/1054/dns/)
 for more information on Tailscale DNS configuration.
 
-### Use Tailscale SSH
+### _(Use Tailscale SSH)_
 
 When enabled, the Tailscale policy is used to manage access to SSH via 
 Tailscale.
@@ -78,7 +78,7 @@ Tailscale.
 Refer to [https://tailscale.com/kb/1193/tailscale-ssh/](https://tailscale.com/kb/1193/tailscale-ssh/) 
 for more information on Tailscale SSH.
 
-## Certificates
+## _(Certificates)_
 
 A Tailscale HTTPS certificate can be used for the WebGUI. Your hostname must
 match the name used for the machine in Tailscale.
@@ -122,7 +122,7 @@ echo "Restarting Minio"
 docker restart Minio
 ```
 
-## Support
+## _(Support)_
 
 Support for this plugin is available via the [support thread](https://forums.unraid.net/topic/136889-plugin-tailscale/)
 on the Unraid forums.
